jdk2pq/src/turtle_jdk2pq.output
Terminals which are not used

   THEN
   FALSE
   TRUE
   RETURN


Grammar

    0 $accept: program $end

    1 program: head decllist stmtlist tail

    2 head: /* empty */

    3 tail: /* empty */

    4 decllist: /* empty */
    5         | decllist decl

    6 decl: VAR ID SEMICOLON

    7 stmtlist: /* empty */
    8         | stmtlist stmt

    9 stmt: ID ASSIGN expr SEMICOLON
   10     | GO expr SEMICOLON
   11     | JUMP expr SEMICOLON
   12     | TURN expr SEMICOLON

   13 @1: /* empty */

   14 stmt: IF expr OPENB @1 stmtlist CLOSEB cond

   15 @2: /* empty */

   16 @3: /* empty */

   17 stmt: WHILE @2 expr OPENB @3 stmtlist CLOSEB

   18 cond: /* empty */

   19 @4: /* empty */

   20 cond: @4 ELSE OPENB stmtlist CLOSEB

   21 @5: /* empty */

   22 stmt: FOR ID ASSIGN expr STEP expr TO expr DO @5 stmt
   23     | COPEN stmtlist CCLOSE

   24 expr: expr PLUS term
   25     | expr MINUS term
   26     | term

   27 term: term EQ factor
   28     | term NOTEQ factor
   29     | term GTE factor
   30     | term LTE factor
   31     | term LT factor
   32     | term GT factor
   33     | term TIMES factor
   34     | term DIV factor
   35     | factor

   36 factor: MINUS atomic
   37       | PLUS atomic
   38       | SIN factor
   39       | COS factor
   40       | SQRT factor
   41       | atomic

   42 atomic: OPEN expr CLOSE
   43       | NUMBER
   44       | FLOAT
   45       | ID


Terminals, with rules where they appear

$end (0) 0
error (256)
GO (258) 10
TURN (259) 12
VAR (260) 6
JUMP (261) 11
FOR (262) 22
STEP (263) 22
TO (264) 22
DO (265) 22
COPEN (266) 23
CCLOSE (267) 23
SIN (268) 38
COS (269) 39
SQRT (270) 40
FLOAT (271) 44
ID (272) 6 9 22 45
NUMBER (273) 43
SEMICOLON (274) 6 9 10 11 12
PLUS (275) 24 37
MINUS (276) 25 36
TIMES (277) 33
DIV (278) 34
OPEN (279) 42
CLOSE (280) 42
ASSIGN (281) 9 22
IF (282) 14
ELSE (283) 20
THEN (284)
WHILE (285) 17
FALSE (286)
TRUE (287)
LT (288) 31
GT (289) 32
EQ (290) 27
OPENB (291) 14 17 20
CLOSEB (292) 14 17 20
RETURN (293)
LTE (294) 30
GTE (295) 29
NOTEQ (296) 28


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1, on right: 0
head (44)
    on left: 2, on right: 1
tail (45)
    on left: 3, on right: 1
decllist (46)
    on left: 4 5, on right: 1 5
decl (47)
    on left: 6, on right: 5
stmtlist (48)
    on left: 7 8, on right: 1 8 14 17 20 23
stmt (49)
    on left: 9 10 11 12 14 17 22 23, on right: 8 22
@1 (50)
    on left: 13, on right: 14
@2 (51)
    on left: 15, on right: 17
@3 (52)
    on left: 16, on right: 17
cond (53)
    on left: 18 20, on right: 14
@4 (54)
    on left: 19, on right: 20
@5 (55)
    on left: 21, on right: 22
expr (56)
    on left: 24 25 26, on right: 9 10 11 12 14 17 22 24 25 42
term (57)
    on left: 27 28 29 30 31 32 33 34 35, on right: 24 25 26 27 28 29
    30 31 32 33 34
factor (58)
    on left: 36 37 38 39 40 41, on right: 27 28 29 30 31 32 33 34 35
    38 39 40
atomic (59)
    on left: 42 43 44 45, on right: 36 37 41


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (head)

    program  go to state 1
    head     go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: head . decllist stmtlist tail

    $default  reduce using rule 4 (decllist)

    decllist  go to state 4


state 3

    0 $accept: program $end .

    $default  accept


state 4

    1 program: head decllist . stmtlist tail
    5 decllist: decllist . decl

    VAR  shift, and go to state 5

    $default  reduce using rule 7 (stmtlist)

    decl      go to state 6
    stmtlist  go to state 7


state 5

    6 decl: VAR . ID SEMICOLON

    ID  shift, and go to state 8


state 6

    5 decllist: decllist decl .

    $default  reduce using rule 5 (decllist)


state 7

    1 program: head decllist stmtlist . tail
    8 stmtlist: stmtlist . stmt

    GO     shift, and go to state 9
    TURN   shift, and go to state 10
    JUMP   shift, and go to state 11
    FOR    shift, and go to state 12
    COPEN  shift, and go to state 13
    ID     shift, and go to state 14
    IF     shift, and go to state 15
    WHILE  shift, and go to state 16

    $default  reduce using rule 3 (tail)

    tail  go to state 17
    stmt  go to state 18


state 8

    6 decl: VAR ID . SEMICOLON

    SEMICOLON  shift, and go to state 19


state 9

   10 stmt: GO . expr SEMICOLON

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 29
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 10

   12 stmt: TURN . expr SEMICOLON

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 33
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 11

   11 stmt: JUMP . expr SEMICOLON

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 34
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 12

   22 stmt: FOR . ID ASSIGN expr STEP expr TO expr DO @5 stmt

    ID  shift, and go to state 35


state 13

   23 stmt: COPEN . stmtlist CCLOSE

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 36


state 14

    9 stmt: ID . ASSIGN expr SEMICOLON

    ASSIGN  shift, and go to state 37


state 15

   14 stmt: IF . expr OPENB @1 stmtlist CLOSEB cond

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 38
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 16

   17 stmt: WHILE . @2 expr OPENB @3 stmtlist CLOSEB

    $default  reduce using rule 15 (@2)

    @2  go to state 39


state 17

    1 program: head decllist stmtlist tail .

    $default  reduce using rule 1 (program)


state 18

    8 stmtlist: stmtlist stmt .

    $default  reduce using rule 8 (stmtlist)


state 19

    6 decl: VAR ID SEMICOLON .

    $default  reduce using rule 6 (decl)


state 20

   38 factor: SIN . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 40
    atomic  go to state 32


state 21

   39 factor: COS . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 41
    atomic  go to state 32


state 22

   40 factor: SQRT . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 42
    atomic  go to state 32


state 23

   44 atomic: FLOAT .

    $default  reduce using rule 44 (atomic)


state 24

   45 atomic: ID .

    $default  reduce using rule 45 (atomic)


state 25

   43 atomic: NUMBER .

    $default  reduce using rule 43 (atomic)


state 26

   37 factor: PLUS . atomic

    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    OPEN    shift, and go to state 28

    atomic  go to state 43


state 27

   36 factor: MINUS . atomic

    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    OPEN    shift, and go to state 28

    atomic  go to state 44


state 28

   42 atomic: OPEN . expr CLOSE

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 45
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 29

   10 stmt: GO expr . SEMICOLON
   24 expr: expr . PLUS term
   25     | expr . MINUS term

    SEMICOLON  shift, and go to state 46
    PLUS       shift, and go to state 47
    MINUS      shift, and go to state 48


state 30

   26 expr: term .
   27 term: term . EQ factor
   28     | term . NOTEQ factor
   29     | term . GTE factor
   30     | term . LTE factor
   31     | term . LT factor
   32     | term . GT factor
   33     | term . TIMES factor
   34     | term . DIV factor

    TIMES  shift, and go to state 49
    DIV    shift, and go to state 50
    LT     shift, and go to state 51
    GT     shift, and go to state 52
    EQ     shift, and go to state 53
    LTE    shift, and go to state 54
    GTE    shift, and go to state 55
    NOTEQ  shift, and go to state 56

    $default  reduce using rule 26 (expr)


state 31

   35 term: factor .

    $default  reduce using rule 35 (term)


state 32

   41 factor: atomic .

    $default  reduce using rule 41 (factor)


state 33

   12 stmt: TURN expr . SEMICOLON
   24 expr: expr . PLUS term
   25     | expr . MINUS term

    SEMICOLON  shift, and go to state 57
    PLUS       shift, and go to state 47
    MINUS      shift, and go to state 48


state 34

   11 stmt: JUMP expr . SEMICOLON
   24 expr: expr . PLUS term
   25     | expr . MINUS term

    SEMICOLON  shift, and go to state 58
    PLUS       shift, and go to state 47
    MINUS      shift, and go to state 48


state 35

   22 stmt: FOR ID . ASSIGN expr STEP expr TO expr DO @5 stmt

    ASSIGN  shift, and go to state 59


state 36

    8 stmtlist: stmtlist . stmt
   23 stmt: COPEN stmtlist . CCLOSE

    GO      shift, and go to state 9
    TURN    shift, and go to state 10
    JUMP    shift, and go to state 11
    FOR     shift, and go to state 12
    COPEN   shift, and go to state 13
    CCLOSE  shift, and go to state 60
    ID      shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16

    stmt  go to state 18


state 37

    9 stmt: ID ASSIGN . expr SEMICOLON

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 61
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 38

   14 stmt: IF expr . OPENB @1 stmtlist CLOSEB cond
   24 expr: expr . PLUS term
   25     | expr . MINUS term

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    OPENB  shift, and go to state 62


state 39

   17 stmt: WHILE @2 . expr OPENB @3 stmtlist CLOSEB

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 63
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 40

   38 factor: SIN factor .

    $default  reduce using rule 38 (factor)


state 41

   39 factor: COS factor .

    $default  reduce using rule 39 (factor)


state 42

   40 factor: SQRT factor .

    $default  reduce using rule 40 (factor)


state 43

   37 factor: PLUS atomic .

    $default  reduce using rule 37 (factor)


state 44

   36 factor: MINUS atomic .

    $default  reduce using rule 36 (factor)


state 45

   24 expr: expr . PLUS term
   25     | expr . MINUS term
   42 atomic: OPEN expr . CLOSE

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    CLOSE  shift, and go to state 64


state 46

   10 stmt: GO expr SEMICOLON .

    $default  reduce using rule 10 (stmt)


state 47

   24 expr: expr PLUS . term

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    term    go to state 65
    factor  go to state 31
    atomic  go to state 32


state 48

   25 expr: expr MINUS . term

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    term    go to state 66
    factor  go to state 31
    atomic  go to state 32


state 49

   33 term: term TIMES . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 67
    atomic  go to state 32


state 50

   34 term: term DIV . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 68
    atomic  go to state 32


state 51

   31 term: term LT . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 69
    atomic  go to state 32


state 52

   32 term: term GT . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 70
    atomic  go to state 32


state 53

   27 term: term EQ . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 71
    atomic  go to state 32


state 54

   30 term: term LTE . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 72
    atomic  go to state 32


state 55

   29 term: term GTE . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 73
    atomic  go to state 32


state 56

   28 term: term NOTEQ . factor

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    factor  go to state 74
    atomic  go to state 32


state 57

   12 stmt: TURN expr SEMICOLON .

    $default  reduce using rule 12 (stmt)


state 58

   11 stmt: JUMP expr SEMICOLON .

    $default  reduce using rule 11 (stmt)


state 59

   22 stmt: FOR ID ASSIGN . expr STEP expr TO expr DO @5 stmt

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 75
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 60

   23 stmt: COPEN stmtlist CCLOSE .

    $default  reduce using rule 23 (stmt)


state 61

    9 stmt: ID ASSIGN expr . SEMICOLON
   24 expr: expr . PLUS term
   25     | expr . MINUS term

    SEMICOLON  shift, and go to state 76
    PLUS       shift, and go to state 47
    MINUS      shift, and go to state 48


state 62

   14 stmt: IF expr OPENB . @1 stmtlist CLOSEB cond

    $default  reduce using rule 13 (@1)

    @1  go to state 77


state 63

   17 stmt: WHILE @2 expr . OPENB @3 stmtlist CLOSEB
   24 expr: expr . PLUS term
   25     | expr . MINUS term

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    OPENB  shift, and go to state 78


state 64

   42 atomic: OPEN expr CLOSE .

    $default  reduce using rule 42 (atomic)


state 65

   24 expr: expr PLUS term .
   27 term: term . EQ factor
   28     | term . NOTEQ factor
   29     | term . GTE factor
   30     | term . LTE factor
   31     | term . LT factor
   32     | term . GT factor
   33     | term . TIMES factor
   34     | term . DIV factor

    TIMES  shift, and go to state 49
    DIV    shift, and go to state 50
    LT     shift, and go to state 51
    GT     shift, and go to state 52
    EQ     shift, and go to state 53
    LTE    shift, and go to state 54
    GTE    shift, and go to state 55
    NOTEQ  shift, and go to state 56

    $default  reduce using rule 24 (expr)


state 66

   25 expr: expr MINUS term .
   27 term: term . EQ factor
   28     | term . NOTEQ factor
   29     | term . GTE factor
   30     | term . LTE factor
   31     | term . LT factor
   32     | term . GT factor
   33     | term . TIMES factor
   34     | term . DIV factor

    TIMES  shift, and go to state 49
    DIV    shift, and go to state 50
    LT     shift, and go to state 51
    GT     shift, and go to state 52
    EQ     shift, and go to state 53
    LTE    shift, and go to state 54
    GTE    shift, and go to state 55
    NOTEQ  shift, and go to state 56

    $default  reduce using rule 25 (expr)


state 67

   33 term: term TIMES factor .

    $default  reduce using rule 33 (term)


state 68

   34 term: term DIV factor .

    $default  reduce using rule 34 (term)


state 69

   31 term: term LT factor .

    $default  reduce using rule 31 (term)


state 70

   32 term: term GT factor .

    $default  reduce using rule 32 (term)


state 71

   27 term: term EQ factor .

    $default  reduce using rule 27 (term)


state 72

   30 term: term LTE factor .

    $default  reduce using rule 30 (term)


state 73

   29 term: term GTE factor .

    $default  reduce using rule 29 (term)


state 74

   28 term: term NOTEQ factor .

    $default  reduce using rule 28 (term)


state 75

   22 stmt: FOR ID ASSIGN expr . STEP expr TO expr DO @5 stmt
   24 expr: expr . PLUS term
   25     | expr . MINUS term

    STEP   shift, and go to state 79
    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48


state 76

    9 stmt: ID ASSIGN expr SEMICOLON .

    $default  reduce using rule 9 (stmt)


state 77

   14 stmt: IF expr OPENB @1 . stmtlist CLOSEB cond

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 80


state 78

   17 stmt: WHILE @2 expr OPENB . @3 stmtlist CLOSEB

    $default  reduce using rule 16 (@3)

    @3  go to state 81


state 79

   22 stmt: FOR ID ASSIGN expr STEP . expr TO expr DO @5 stmt

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 82
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 80

    8 stmtlist: stmtlist . stmt
   14 stmt: IF expr OPENB @1 stmtlist . CLOSEB cond

    GO      shift, and go to state 9
    TURN    shift, and go to state 10
    JUMP    shift, and go to state 11
    FOR     shift, and go to state 12
    COPEN   shift, and go to state 13
    ID      shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16
    CLOSEB  shift, and go to state 83

    stmt  go to state 18


state 81

   17 stmt: WHILE @2 expr OPENB @3 . stmtlist CLOSEB

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 84


state 82

   22 stmt: FOR ID ASSIGN expr STEP expr . TO expr DO @5 stmt
   24 expr: expr . PLUS term
   25     | expr . MINUS term

    TO     shift, and go to state 85
    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48


state 83

   14 stmt: IF expr OPENB @1 stmtlist CLOSEB . cond

    ELSE      reduce using rule 19 (@4)
    $default  reduce using rule 18 (cond)

    cond  go to state 86
    @4    go to state 87


state 84

    8 stmtlist: stmtlist . stmt
   17 stmt: WHILE @2 expr OPENB @3 stmtlist . CLOSEB

    GO      shift, and go to state 9
    TURN    shift, and go to state 10
    JUMP    shift, and go to state 11
    FOR     shift, and go to state 12
    COPEN   shift, and go to state 13
    ID      shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16
    CLOSEB  shift, and go to state 88

    stmt  go to state 18


state 85

   22 stmt: FOR ID ASSIGN expr STEP expr TO . expr DO @5 stmt

    SIN     shift, and go to state 20
    COS     shift, and go to state 21
    SQRT    shift, and go to state 22
    FLOAT   shift, and go to state 23
    ID      shift, and go to state 24
    NUMBER  shift, and go to state 25
    PLUS    shift, and go to state 26
    MINUS   shift, and go to state 27
    OPEN    shift, and go to state 28

    expr    go to state 89
    term    go to state 30
    factor  go to state 31
    atomic  go to state 32


state 86

   14 stmt: IF expr OPENB @1 stmtlist CLOSEB cond .

    $default  reduce using rule 14 (stmt)


state 87

   20 cond: @4 . ELSE OPENB stmtlist CLOSEB

    ELSE  shift, and go to state 90


state 88

   17 stmt: WHILE @2 expr OPENB @3 stmtlist CLOSEB .

    $default  reduce using rule 17 (stmt)


state 89

   22 stmt: FOR ID ASSIGN expr STEP expr TO expr . DO @5 stmt
   24 expr: expr . PLUS term
   25     | expr . MINUS term

    DO     shift, and go to state 91
    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48


state 90

   20 cond: @4 ELSE . OPENB stmtlist CLOSEB

    OPENB  shift, and go to state 92


state 91

   22 stmt: FOR ID ASSIGN expr STEP expr TO expr DO . @5 stmt

    $default  reduce using rule 21 (@5)

    @5  go to state 93


state 92

   20 cond: @4 ELSE OPENB . stmtlist CLOSEB

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 94


state 93

   22 stmt: FOR ID ASSIGN expr STEP expr TO expr DO @5 . stmt

    GO     shift, and go to state 9
    TURN   shift, and go to state 10
    JUMP   shift, and go to state 11
    FOR    shift, and go to state 12
    COPEN  shift, and go to state 13
    ID     shift, and go to state 14
    IF     shift, and go to state 15
    WHILE  shift, and go to state 16

    stmt  go to state 95


state 94

    8 stmtlist: stmtlist . stmt
   20 cond: @4 ELSE OPENB stmtlist . CLOSEB

    GO      shift, and go to state 9
    TURN    shift, and go to state 10
    JUMP    shift, and go to state 11
    FOR     shift, and go to state 12
    COPEN   shift, and go to state 13
    ID      shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16
    CLOSEB  shift, and go to state 96

    stmt  go to state 18


state 95

   22 stmt: FOR ID ASSIGN expr STEP expr TO expr DO @5 stmt .

    $default  reduce using rule 22 (stmt)


state 96

   20 cond: @4 ELSE OPENB stmtlist CLOSEB .

    $default  reduce using rule 20 (cond)
